fixes for wrong colors

--- a/styles/colors-electro.less
+++ b/styles/colors-electro.less
@@ -34,7 +34,7 @@
 @agate-title-text-color: var(--agate-title-text-color, #ffffff);
 @agate-toggle-off-color: var(--agate-toggle-off-color, @agate-title-text-color);
 @agate-toggle-on-color: var(--agate-toggle-on-color, @agate-title-text-color);
-@agate-toggle-off-bg-color: var(--agate-toggle-off-bg-color, ~"hsla(" @electro-accent2-h, @electro-accent2-s, @electro-accent2-l ~", 0.7)");
+@agate-toggle-off-bg-color: var(--agate-toggle-off-bg-color, ~"hsla(var(--agate-accent-h, 0), var(--agate-accent-s, 0), var(--agate-accent-l, 0), 0.8)");
 @agate-toggle-on-bg-color: var(--agate-toggle-on-bg-color, @agate-highlight);
 
 // Local Electro variables
