--- a/styles/colors-silicon-night.less
+++ b/styles/colors-silicon-night.less
@@ -26,7 +26,7 @@
 @agate-text-color: var(--agate-text-color, #ffffff);
 @agate-text-sub-color: var(--agate-text-sub-color, #b3b3b3);
 @agate-title-text-color: var(--agate-title-text-color, #ffffff);
-@agate-toggle-off-color: var(--agate-toggle-off-color, #5e5e5e);
+@agate-toggle-off-color: var(--agate-toggle-off-color, #999999);
 @agate-toggle-on-color: var(--agate-toggle-on-color, @agate-accent);
 @agate-toggle-off-bg-color: var(--agate-toggle-off-bg-color, #ffffff);
 @agate-toggle-on-bg-color: var(--agate-toggle-on-bg-color, #ffffff);
